# fluxpype

./: .gitignore  MANIFEST.in  README.md  README_old.md  comprehensive_fluxpype_installer.py  fluxpype.code-workspace  install-fluxpipe-macos.sh  pdl_req_installer.py  pyproject.toml  requirements.txt  setup.py  unified_installer.py
dep/: README_template.md
dep/scripts/: bootstrap_pdl.pl  setup.py.bkk  unified_installer.py
dep/scripts/new/: flux_installer.py  install_flux.py  refined_setup copy.py  updated_install-fluxpipe-macos.sh  updated_setup.py
fluxpype/: __init__.py  __main__.py  config.ini  config_runner.py  config_runner_parallel.py  open_world_python.py  pipe_helper.pm  pipe_helper.py  run_pdl.sh  unified_installer.py
fluxpype/config/: config.ini
fluxpype/data/batches/Newtest/: pipe_log.txt
fluxpype/data/batches/Newtest/data/cr2164/wind/: np_labels.txt
fluxpype/data/batches/Newtest/data/cr2166/wind/: cr2166_f200_radial_wind_ghosts.npy
fluxpype/helpers/: pipe_helper.pm  pipe_helper.py
fluxpype/installers/: flux_installer.py  unified_installer.py
fluxpype/plotting/: multiplot_bmag_all.py  plot_angles.py  plot_bmag.py  plot_bmag_all.py  plot_bmag_fill.py  plot_bmag_fill_orig.py  plot_fieldmap.py  plot_flux_mag.py  plot_fr.py  plot_wind_map_detailed.py  plot_wind_map_latitude.py  plot_wind_map_latitude_cycle.py  plot_wind_map_square.py  plot_wind_solutions.py  plot_world.pm
fluxpype/runners/: config_runner.py  config_runner_parallel.py  config_runner_timeoutsafe.py  mag_runner.py  manual_runner.py
fluxpype/science/: cranmer_wind.py  fluxlight.py  fluxon_placement_hilbert.pm  footpoint_distances.py  footpoint_distances_2.py  footpoint_distances_wsa.py  footpoint_distances_wsa_bkk.py  footpoint_distances_wsa_bkk2.py  gen_fluxon_flow.pm  gen_fluxon_ghostsflow.pm  gen_fluxon_tempestflow.pm  gen_fluxon_tflow.pm  gen_fluxon_wsaflow.pm  gen_fluxon_wsaflow_bkk.pm  generate_hmi_ocmap_cycle.ipynb  generate_pfss_windmap.ipynb  get_hilbert_footpoints.pm  get_magnetograms.py  get_pfss.py  get_wind.pm  magnetogram2wind.pdl  make_tempest_file.pm  make_world_from_pfss.pm  map_fluxon_b.pm  map_fluxon_b_all.pm  map_fluxon_flow_parallel_master.pm  open_world_python.py  perltidy.ERR  pfss_funcs.py  relax_pfss_world.pm  simple_relaxer.pm  tempest.py  tempest_bkk.py  thompson_test_script_bkk.py  thomson_scattering_flux.py  wind_analysis.ipynb
fluxpype/science/_Inline/: config-darwin-2level-5.032000  config-darwin-thread-multi-2level-5.032001
fluxpype/science/depricated/: make_tempest_file.ipynb  make_tempest_file.py
scripts/: comprehensive_fluxpype_installer.py  config_runner_parallel.py  flux_installer.py  install_flux.py  setup.py  unified_fluxpype_installer.py  unified_installer.py
scripts/new/: final_setup.py  integrated_setup1  setup.py  updated_pyproject.toml  updated_setup.py
src/config/: config.ini
src/helpers/: pipe_helper.pm  pipe_helper.py
src/runners/: config_runner.py  config_runner_timeoutsafe.py
src/science/: fluxon_placement_hilbert.pm  get_hilbert_footpoints.pm  magnetogram2wind.pdl
