[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "fluxpype"
version = "0.1.5"
description = "A wrapper and installer for the FLUX model"
readme = "README.md"
requires-python = ">=3.8"
license = { file = "LICENSE" }

classifiers = [
    "Programming Language :: Python :: 3.8",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

dependencies = [
    "matplotlib",
    "sunpy",
    "pandas",
    "tqdm",
    "astropy",
    "bs4",
    "lxml",
    "zeep",
    "drms",
    "timeout_decorator",
    "rich",
]

[project.optional-dependencies]
FLUXcore = []

[project.urls]
homepage = "https://github.com/gillyspace27/fluxpype"
base-project = "https://github.com/lowderchris/fluxon-mhd"

[tool.setuptools.packages]
find = { where = ["fluxpype"] }

[tool.setuptools.package-data]
"fluxpype" = ["bootstrap_pdl.pl", "science/*", "plotting/*"]

[tool.setuptools]
include-package-data = true

[project.entry-points."console_scripts"]
flux_config_run = "fluxpype.config_runner:run"
flux_config_view = "fluxpype.config_runner:view"
flux_config_edit = "fluxpype.config_runner:open_file"
